#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
å¾®æœåŠ¡è°ƒç”¨ Mixin

ä» bazi_calculator.py æå–çš„å¾®æœåŠ¡é€šä¿¡ç›¸å…³æ–¹æ³•ã€‚
åŒ…å« bazi-coreã€bazi-fortuneã€bazi-rule ä¸‰ä¸ªå¾®æœåŠ¡çš„è°ƒç”¨/å›é€€é€»è¾‘ã€‚
"""

import os
import socket
from datetime import datetime

from core.calculators.bazi_logging import safe_log


class BaziServiceClientMixin:
    """å¾®æœåŠ¡è°ƒç”¨æ–¹æ³•ï¼Œä»¥ Mixin æ–¹å¼æ³¨å…¥ WenZhenBazi"""

    def _normalize_current_time(self, current_time=None):
        if current_time is None:
            return None, None
        if isinstance(current_time, datetime):
            return current_time, current_time.isoformat()
        try:
            parsed = datetime.fromisoformat(str(current_time))
            return parsed, parsed.isoformat()
        except Exception:
            return None, str(current_time)

    def _apply_remote_core_result(self, result: dict):
        """æ¥æ”¶å¾®æœåŠ¡æ’ç›˜ç»“æœå¹¶åŒæ­¥åˆ°å½“å‰å®ä¾‹"""
        if not result:
            return

        basic = result.get('basic_info', {})
        self.last_result = result
        self.bazi_pillars = result.get('bazi_pillars', {}) or {}
        self.details = result.get('details', {}) or {}
        self.lunar_date = basic.get('lunar_date')
        self.adjusted_solar_date = basic.get('adjusted_solar_date', self.solar_date)
        self.adjusted_solar_time = basic.get('adjusted_solar_time', self.solar_time)
        self.is_zi_shi_adjusted = basic.get('is_zi_shi_adjusted', False)

        if self.bazi_pillars and self.details:
            from core.config.star_fortune_config import StarFortuneCalculator
            calculator = StarFortuneCalculator()
            day_stem = self.bazi_pillars.get('day', {}).get('stem', '')

            for pillar_type in ['year', 'month', 'day', 'hour']:
                pillar = self.bazi_pillars.get(pillar_type, {})
                if not pillar:
                    continue

                pillar_detail = self.details.get(pillar_type, {})
                if not isinstance(pillar_detail, dict):
                    self.details[pillar_type] = {}
                    pillar_detail = self.details[pillar_type]

                if 'star_fortune' not in pillar_detail or not pillar_detail.get('star_fortune'):
                    star_fortune = calculator.get_stem_fortune(day_stem, pillar.get('branch', ''))
                    pillar_detail['star_fortune'] = star_fortune

                if 'self_sitting' not in pillar_detail or not pillar_detail.get('self_sitting'):
                    self_sitting = calculator.get_stem_fortune(pillar.get('stem', ''), pillar.get('branch', ''))
                    pillar_detail['self_sitting'] = self_sitting

    def _calculate_via_core_service(self):
        """é€šè¿‡ bazi-core å¾®æœåŠ¡è®¡ç®—æ’ç›˜ï¼ˆå¯é€‰ï¼Œæœªé…ç½®æ—¶è¿”å› Noneï¼‰"""
        service_url = os.getenv("BAZI_CORE_SERVICE_URL", "").strip()
        if not service_url:
            return None

        if service_url.startswith("http://"):
            service_url = service_url[7:]
        elif service_url.startswith("https://"):
            service_url = service_url[8:]

        if ":" in service_url:
            host, port_str = service_url.rsplit(":", 1)
            try:
                port = int(port_str)
            except ValueError:
                host, port = service_url, 9001
        else:
            host, port = service_url, 9001

        import datetime as dt_mod
        request_time = dt_mod.datetime.now().strftime("%Y-%m-%d %H:%M:%S")
        safe_log('info', f"[{request_time}] ğŸ”µ bazi_calculator.py: å¼ºåˆ¶è°ƒç”¨ bazi-core-service (gRPC): {service_url}")

        strict = os.getenv("BAZI_CORE_SERVICE_STRICT", "0") == "1"
        try:
            from shared.clients.bazi_core_client_grpc import BaziCoreClient

            client = BaziCoreClient(base_url=service_url, timeout=30.0)
            result = client.calculate_bazi(self.solar_date, self.solar_time, self.gender)
            safe_log('info', f"[{request_time}] âœ… bazi_calculator.py: bazi-core-service è°ƒç”¨æˆåŠŸ")
            self._apply_remote_core_result(result)
            return result
        except Exception as exc:
            is_port_listening = self._check_service_port(host, port)

            if "DEADLINE_EXCEEDED" in str(exc):
                if is_port_listening:
                    error_msg = f"å¾®æœåŠ¡è°ƒç”¨è¶…æ—¶ï¼ˆæœåŠ¡åœ¨è¿è¡Œä½†å“åº”æ…¢ï¼Œç«¯å£ {port} æ­£åœ¨ç›‘å¬ï¼‰: {exc}"
                    safe_log('warning', f"[{request_time}] âš ï¸  bazi_calculator.py: {error_msg}")
                else:
                    error_msg = f"å¾®æœåŠ¡è°ƒç”¨è¶…æ—¶ï¼ˆæœåŠ¡å¯èƒ½å·²æŒ‚ï¼Œç«¯å£ {port} æœªåœ¨ç›‘å¬ï¼‰: {exc}"
                    safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")
            elif "Connection refused" in str(exc) or isinstance(exc, ConnectionError):
                error_msg = f"å¾®æœåŠ¡è¿æ¥è¢«æ‹’ç»ï¼ˆæœåŠ¡å·²æŒ‚ï¼Œç«¯å£ {port} æœªåœ¨ç›‘å¬ï¼‰: {exc}"
                safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")
            else:
                error_msg = f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥: {exc}"
                safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")

            if strict:
                raise RuntimeError(f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥ï¼ˆä¸¥æ ¼æ¨¡å¼ï¼‰: {exc}") from exc

            is_connection_error = (
                isinstance(exc, (ConnectionError, TimeoutError)) or
                "DEADLINE_EXCEEDED" in str(exc) or
                "Connection refused" in str(exc) or
                "Name resolution" in str(exc)
            )

            if is_connection_error:
                if is_port_listening:
                    safe_log('warning', f"[{request_time}] âš ï¸  æœåŠ¡å“åº”è¶…æ—¶ä½†ç«¯å£åœ¨ç›‘å¬ï¼Œå…è®¸å›é€€åˆ°æœ¬åœ°è®¡ç®—")
                else:
                    safe_log('warning', f"[{request_time}] âš ï¸  æœåŠ¡ç«¯å£æœªç›‘å¬ï¼Œå…è®¸å›é€€åˆ°æœ¬åœ°è®¡ç®—")
                return None
            else:
                raise RuntimeError(f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥: {exc}") from exc

    @staticmethod
    def _check_service_port(host, port):
        """æ£€æŸ¥æœåŠ¡ç«¯å£æ˜¯å¦åœ¨ç›‘å¬"""
        try:
            sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
            sock.settimeout(2)
            result = sock.connect_ex((host, port))
            sock.close()
            return result == 0
        except Exception:
            return False

    def _ensure_fortune_detail(self, current_time=None):
        if self.last_fortune_detail is not None:
            return self.last_fortune_detail

        current_time_obj, current_time_str = self._normalize_current_time(current_time)

        service_url = os.getenv("BAZI_FORTUNE_SERVICE_URL", "").strip()
        if not service_url:
            raise RuntimeError(
                "âŒ BAZI_FORTUNE_SERVICE_URL æœªè®¾ç½®ï¼æ‰€æœ‰å±•ç¤ºé¡µé¢å¿…é¡»è°ƒç”¨å¾®æœåŠ¡ã€‚\n"
                "è¯·ç¡®ä¿å·²å¯åŠ¨å¾®æœåŠ¡å¹¶è®¾ç½®ç¯å¢ƒå˜é‡ã€‚\n"
                "å¯åŠ¨æ–¹å¼: ./start_all_services.sh"
            )

        if service_url.startswith("http://"):
            service_url = service_url[7:]
        elif service_url.startswith("https://"):
            service_url = service_url[8:]

        if ":" in service_url:
            host, port_str = service_url.rsplit(":", 1)
            try:
                port = int(port_str)
            except ValueError:
                host, port = service_url, 9001  # å·²åˆå¹¶åˆ° bazi-compute
        else:
            host, port = service_url, 9001  # å·²åˆå¹¶åˆ° bazi-compute

        import datetime as dt_mod
        request_time = dt_mod.datetime.now().strftime("%Y-%m-%d %H:%M:%S")
        safe_log('info', f"[{request_time}] ğŸ”µ bazi_calculator.py: å¼ºåˆ¶è°ƒç”¨ bazi-fortune-service (gRPC): {service_url}")

        detail = None
        strict = os.getenv("BAZI_FORTUNE_SERVICE_STRICT", "0") == "1"
        try:
            from shared.clients.bazi_fortune_client_grpc import BaziFortuneClient

            client = BaziFortuneClient(base_url=service_url, timeout=30.0)
            detail = client.calculate_detail(
                self.solar_date,
                self.solar_time,
                self.gender,
                current_time=current_time_str,
            )
            safe_log('info', f"[{request_time}] âœ… bazi_calculator.py: bazi-fortune-service è°ƒç”¨æˆåŠŸ")
        except Exception as exc:
            is_port_listening = self._check_service_port(host, port)

            if "DEADLINE_EXCEEDED" in str(exc):
                if is_port_listening:
                    error_msg = f"å¾®æœåŠ¡è°ƒç”¨è¶…æ—¶ï¼ˆæœåŠ¡åœ¨è¿è¡Œä½†å“åº”æ…¢ï¼Œç«¯å£ {port} æ­£åœ¨ç›‘å¬ï¼‰: {exc}"
                    safe_log('warning', f"[{request_time}] âš ï¸  bazi_calculator.py: {error_msg}")
                else:
                    error_msg = f"å¾®æœåŠ¡è°ƒç”¨è¶…æ—¶ï¼ˆæœåŠ¡å¯èƒ½å·²æŒ‚ï¼Œç«¯å£ {port} æœªåœ¨ç›‘å¬ï¼‰: {exc}"
                    safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")
            elif "Connection refused" in str(exc) or isinstance(exc, ConnectionError):
                error_msg = f"å¾®æœåŠ¡è¿æ¥è¢«æ‹’ç»ï¼ˆæœåŠ¡å·²æŒ‚ï¼Œç«¯å£ {port} æœªåœ¨ç›‘å¬ï¼‰: {exc}"
                safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")
            else:
                error_msg = f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥: {exc}"
                safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")

            if strict:
                raise RuntimeError(f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥ï¼ˆä¸¥æ ¼æ¨¡å¼ï¼‰: {exc}") from exc

            is_connection_error = (
                isinstance(exc, (ConnectionError, TimeoutError)) or
                "DEADLINE_EXCEEDED" in str(exc) or
                "Connection refused" in str(exc) or
                "Name resolution" in str(exc)
            )

            if is_connection_error:
                if is_port_listening:
                    safe_log('warning', f"[{request_time}] âš ï¸  æœåŠ¡å“åº”è¶…æ—¶ä½†ç«¯å£åœ¨ç›‘å¬ï¼Œå…è®¸å›é€€åˆ°æœ¬åœ°è®¡ç®—")
                else:
                    safe_log('warning', f"[{request_time}] âš ï¸  æœåŠ¡ç«¯å£æœªç›‘å¬ï¼Œå…è®¸å›é€€åˆ°æœ¬åœ°è®¡ç®—")
                from core.calculators.helpers import compute_local_detail
                detail = compute_local_detail(
                    self.solar_date,
                    self.solar_time,
                    self.gender,
                    current_time=current_time_obj,
                )
            else:
                raise RuntimeError(f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥: {exc}") from exc

        if detail is None:
            from core.calculators.helpers import compute_local_detail
            detail = compute_local_detail(
                self.solar_date,
                self.solar_time,
                self.gender,
                current_time=current_time_obj,
            )

        self.last_fortune_detail = detail
        return detail

    def _build_fortune_snapshot(self, detail):
        if not detail:
            return {}

        fortune = {}
        details = detail.get('details', {}) or {}
        liunian_info = detail.get('liunian_info', {}) or {}
        current_liunian = details.get('liunian') or liunian_info.get('current_liunian') or {}
        liunian_sequence = (
            detail.get('liunian_sequence')
            or details.get('liunian_sequence')
            or []
        )

        liunian_copy = dict(current_liunian) if current_liunian else {}
        target_year = None
        if liunian_copy and liunian_sequence:
            for entry in liunian_sequence:
                if (
                    entry.get('stem') == liunian_copy.get('stem')
                    and entry.get('branch') == liunian_copy.get('branch')
                ):
                    target_year = entry.get('year')
                    if target_year:
                        break

        if target_year is None:
            current_time_val = detail.get('basic_info', {}).get('current_time')
            if current_time_val:
                try:
                    target_year = int(str(current_time_val)[:4])
                except Exception:
                    target_year = None

        if target_year is None:
            context = details.get('current_context', {}) or {}
            target_year = context.get('selected_year')

        if liunian_copy and target_year is not None:
            liunian_copy.setdefault('year', target_year)

        fortune['current_liunian'] = liunian_copy
        if target_year is not None:
            fortune['current_year'] = target_year
        if liunian_sequence:
            fortune['liunian_sequence'] = liunian_sequence

        return fortune

    def _ensure_fortune_snapshot(self, current_time=None):
        if self.last_fortune_snapshot is not None:
            return self.last_fortune_snapshot
        detail = self._ensure_fortune_detail(current_time=current_time)
        snapshot = self._build_fortune_snapshot(detail)
        self.last_fortune_snapshot = snapshot
        return snapshot

    def _match_rules_via_service(self, rule_types=None, use_cache=False):
        service_url = os.getenv("BAZI_RULE_SERVICE_URL", "").strip()
        if not service_url:
            raise RuntimeError(
                "âŒ BAZI_RULE_SERVICE_URL æœªè®¾ç½®ï¼æ‰€æœ‰å±•ç¤ºé¡µé¢å¿…é¡»è°ƒç”¨å¾®æœåŠ¡ã€‚\n"
                "è¯·ç¡®ä¿å·²å¯åŠ¨å¾®æœåŠ¡å¹¶è®¾ç½®ç¯å¢ƒå˜é‡ã€‚\n"
                "å¯åŠ¨æ–¹å¼: ./start_all_services.sh"
            )

        if service_url.startswith("http://"):
            service_url = service_url[7:]
        elif service_url.startswith("https://"):
            service_url = service_url[8:]

        if ":" in service_url:
            host, port_str = service_url.rsplit(":", 1)
            try:
                port = int(port_str)
            except ValueError:
                host, port = service_url, 9004
        else:
            host, port = service_url, 9004

        import datetime as dt_mod
        request_time = dt_mod.datetime.now().strftime("%Y-%m-%d %H:%M:%S")
        rule_types_str = ", ".join(rule_types) if rule_types else "å…¨éƒ¨"
        safe_log('info', f"[{request_time}] ğŸ”µ bazi_calculator.py: å¼ºåˆ¶è°ƒç”¨ bazi-rule-service (gRPC): {service_url}, rule_types=[{rule_types_str}]")

        strict = os.getenv("BAZI_RULE_SERVICE_STRICT", "0") == "1"
        try:
            from shared.clients.bazi_rule_client_grpc import BaziRuleClient

            client = BaziRuleClient(base_url=service_url, timeout=120.0)
            use_cache_optimized = use_cache if use_cache is not None else True
            response = client.match_rules(
                self.solar_date,
                self.solar_time,
                self.gender,
                rule_types=rule_types,
                use_cache=use_cache_optimized,
            )
            matched_count = len(response.get("matched", []))
            safe_log('info', f"[{request_time}] âœ… bazi_calculator.py: bazi-rule-service è°ƒç”¨æˆåŠŸï¼ŒåŒ¹é… {matched_count} æ¡è§„åˆ™")

            matched = response.get("matched", [])
            unmatched = response.get("unmatched", [])
            context = response.get("context", {})

            self.last_matched_rules = matched
            self.last_unmatched_rules = unmatched
            self.last_rule_context = context or {}

            return matched, unmatched
        except Exception as exc:
            import traceback

            is_port_listening = self._check_service_port(host, port)

            if "DEADLINE_EXCEEDED" in str(exc):
                if is_port_listening:
                    error_msg = f"å¾®æœåŠ¡è°ƒç”¨è¶…æ—¶ï¼ˆæœåŠ¡åœ¨è¿è¡Œä½†å“åº”æ…¢ï¼Œç«¯å£ {port} æ­£åœ¨ç›‘å¬ï¼‰: {exc}"
                    safe_log('warning', f"[{request_time}] âš ï¸  bazi_calculator.py: {error_msg}")
                else:
                    error_msg = f"å¾®æœåŠ¡è°ƒç”¨è¶…æ—¶ï¼ˆæœåŠ¡å¯èƒ½å·²æŒ‚ï¼Œç«¯å£ {port} æœªåœ¨ç›‘å¬ï¼‰: {exc}"
                    safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")
            elif "Connection refused" in str(exc) or isinstance(exc, ConnectionError):
                error_msg = f"å¾®æœåŠ¡è¿æ¥è¢«æ‹’ç»ï¼ˆæœåŠ¡å·²æŒ‚ï¼Œç«¯å£ {port} æœªåœ¨ç›‘å¬ï¼‰: {exc}"
                safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")
            else:
                error_msg = f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥: {exc}"
                safe_log('error', f"[{request_time}] âŒ bazi_calculator.py: {error_msg}")

            if strict:
                raise RuntimeError(f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥ï¼ˆä¸¥æ ¼æ¨¡å¼ï¼‰: {exc}") from exc

            is_connection_error = (
                isinstance(exc, (ConnectionError, TimeoutError)) or
                "DEADLINE_EXCEEDED" in str(exc) or
                "Connection refused" in str(exc) or
                "Name resolution" in str(exc)
            )

            if is_connection_error:
                if is_port_listening:
                    safe_log('warning', f"[{request_time}] âš ï¸  æœåŠ¡å“åº”è¶…æ—¶ä½†ç«¯å£åœ¨ç›‘å¬ï¼Œå…è®¸å›é€€åˆ°æœ¬åœ°è§„åˆ™åŒ¹é…")
                else:
                    safe_log('warning', f"[{request_time}] âš ï¸  æœåŠ¡ç«¯å£æœªç›‘å¬ï¼Œå…è®¸å›é€€åˆ°æœ¬åœ°è§„åˆ™åŒ¹é…")
                return self._match_rules_locally(rule_types)
            else:
                raise RuntimeError(f"å¾®æœåŠ¡è°ƒç”¨å¤±è´¥: {exc}") from exc
